bin_PROGRAMS = acharts

acharts_SOURCES = \
	bezier.cc \
	catalogue.cc \
	config.cc \
	config_parser_i_hate_boost.cc \
	drawer.cc \
	main.cc \
	moon_and_sun.cc \
	now.cc \
	planet.cc \
	projection.cc \
	scene_storage.cc \
	solar_object.cc \
	stars.cc \
	svg_painter.cc \
	types.cc

AM_CXXFLAGS = ${ACHARTS_CXXFLAGS}

CLEANFILE = *~
