bin_PROGRAMS = acharts

acharts_SOURCES = \
	config_parser_i_hate_boost.cc config_parser.hh \
	bezier.cc bezier.hh \
	canvas.hh \
	catalogue.cc catalogue.hh \
	catalogue_description.cc catalogue_description.hh \
	constellations.cc constellations.hh constellations.cc.in \
	config.cc config.hh \
	drawer.cc drawer.hh \
	exceptions.hh \
	grid_and_tick.hh \
	gzstream.cc gzstream.hh \
	main.cc \
	magic.cc magic.hh \
	moon_and_sun.cc moon_and_sun.hh \
	now.cc now.hh \
	planet.cc planet.hh \
	projection.cc projection.hh \
	scene.cc scene.hh \
	solar_object.cc solar_object.hh \
	stars.hh \
	svg_painter.cc svg_painter.hh \
	track.hh \
	types.cc types.hh

AM_CXXFLAGS = ${ACHARTS_CXXFLAGS}

CLEANFILE = *~
